; ModuleID = '/home/carl/AnghaBench/reactos/dll/win32/oleaut32/extr_typelib.c_SLTG_ReadString.c'
source_filename = "/home/carl/AnghaBench/reactos/dll/win32/oleaut32/extr_typelib.c_SLTG_ReadString.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32 }

@CP_ACP = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i8*, i32**, %struct.TYPE_3__*)* @SLTG_ReadString to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @SLTG_ReadString(i8* %0, i32** %1, %struct.TYPE_3__* %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i8*, align 8
  %6 = alloca i32**, align 8
  %7 = alloca %struct.TYPE_3__*, align 8
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca i32*, align 8
  store i8* %0, i8** %5, align 8
  store i32** %1, i32*** %6, align 8
  store %struct.TYPE_3__* %2, %struct.TYPE_3__** %7, align 8
  %11 = load i32**, i32*** %6, align 8
  store i32* null, i32** %11, align 8
  %12 = load i8*, i8** %5, align 8
  %13 = bitcast i8* %12 to i32*
  %14 = load i32, i32* %13, align 4
  store i32 %14, i32* %8, align 4
  %15 = load i32, i32* %8, align 4
  %16 = icmp eq i32 %15, 65535
  br i1 %16, label %17, label %18

17:                                               ; preds = %3
  store i32 2, i32* %4, align 4
  br label %46

18:                                               ; preds = %3
  %19 = load i32, i32* @CP_ACP, align 4
  %20 = load i8*, i8** %5, align 8
  %21 = getelementptr inbounds i8, i8* %20, i64 2
  %22 = load i32, i32* %8, align 4
  %23 = call i32 @MultiByteToWideChar(i32 %19, i32 0, i8* %21, i32 %22, i32* null, i32 0)
  store i32 %23, i32* %9, align 4
  %24 = load i32, i32* %9, align 4
  %25 = call i32* @SysAllocStringLen(i32* null, i32 %24)
  store i32* %25, i32** %10, align 8
  %26 = load i32*, i32** %10, align 8
  %27 = icmp ne i32* %26, null
  br i1 %27, label %28, label %43

28:                                               ; preds = %18
  %29 = load i32, i32* @CP_ACP, align 4
  %30 = load i8*, i8** %5, align 8
  %31 = getelementptr inbounds i8, i8* %30, i64 2
  %32 = load i32, i32* %8, align 4
  %33 = load i32*, i32** %10, align 8
  %34 = load i32, i32* %9, align 4
  %35 = call i32 @MultiByteToWideChar(i32 %29, i32 0, i8* %31, i32 %32, i32* %33, i32 %34)
  %36 = load %struct.TYPE_3__*, %struct.TYPE_3__** %7, align 8
  %37 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %36, i32 0, i32 0
  %38 = load i32*, i32** %10, align 8
  %39 = call i32* @TLB_append_str(i32* %37, i32* %38)
  %40 = load i32**, i32*** %6, align 8
  store i32* %39, i32** %40, align 8
  %41 = load i32*, i32** %10, align 8
  %42 = call i32 @SysFreeString(i32* %41)
  br label %43

43:                                               ; preds = %28, %18
  %44 = load i32, i32* %8, align 4
  %45 = add nsw i32 %44, 2
  store i32 %45, i32* %4, align 4
  br label %46

46:                                               ; preds = %43, %17
  %47 = load i32, i32* %4, align 4
  ret i32 %47
}

declare dso_local i32 @MultiByteToWideChar(i32, i32, i8*, i32, i32*, i32) #1

declare dso_local i32* @SysAllocStringLen(i32*, i32) #1

declare dso_local i32* @TLB_append_str(i32*, i32*) #1

declare dso_local i32 @SysFreeString(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
